Corrected error on language selector Updated last updated date

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -36,39 +36,25 @@ height="1"></td>
 <tr>
 <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg"
 alt="DScaler logo"></td>
-<td colspan="2" align="right" valign="top"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
-"1"><!-- #BeginEditable "Language%20Selector" --><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
-"1"><font face="Verdana, Arial, Helvetica, sans-serif" size=
-"5"><b>="francais/FAQ.htm"&gt;<font size="1"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><img src=
-"images/selector-french.gif" width="50" height="18" border=
-"0"></font></font></b><img src="images/selector-divider.gif"
-width="10" height="17"><b><font size="1"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
-"1"><font face="Verdana, Arial, Helvetica, sans-serif" size=
-"5"><b><a href="russian/FAQ.htm"><font size="1"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><img src=
-"images/selector-russian.gif" width="45" height="18" border=
-"0"></font></font></a></b><img src="images/selector-divider.gif"
-width="10" height="17"></font></font></b></font></font></b><b><a
-href="portuguese/PortugueseFAQ.htm"><font size="1"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><img src=
-"images/selector-portuguese.gif" width="60" height="18" border=
-"0"></font></font></a></b></font></font></b><img src=
-"images/selector-divider.gif" width="10" height="17"><b><font
-size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size=
-"5"><img src="images/selector-english.gif" width="45" height="18"
-border="0"></font></font></b></font> 
-<!-- #EndEditable --></font></b></font></td>
+<td colspan="2" align="right" valign="top">
+<!-- #BeginEditable "Language%20Selector" -->
+<a href="francais/FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a>
+<img src="images/selector-divider.gif" width="10" height="18">
+<a href="russian/FAQ.htm"><img src="images/selector-russian.gif" width="45" height="18" border="0"></a>
+<img src="images/selector-divider.gif" width="10" height="18">
+<a href="portuguese/PortugueseFAQ.htm"><img src="images/selector-portuguese.gif" width="60" height="18" border="0"></a>
+<img src="images/selector-divider.gif" width="10" height="18">
+<img src="images/selector-english.gif" width="45" height="18">
+<!-- #EndEditable -->
+</td>
 </tr>
 
 <tr>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-DScaler FAQ  <!-- #EndEditable -->
+DScaler FAQ  
+<!-- #EndEditable -->
 </b></font> </td>
 </tr>
 
@@ -78,13 +64,13 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3">Last update: May 22nd 2001</td>
+<td colspan="3">Last update: September 5th 2001</td>
 </tr>
 
 <tr>
-<td colspan="3"><!-- #BeginEditable "Text" -->
-<h1><br>
-</h1>
+<td colspan="3">
+<!-- #BeginEditable "Text" -->
+<h1><br></h1>
 
 <h1>Introduction</h1>
 
