--- a/htdocs/Help/HelpContents.htm
+++ b/htdocs/Help/HelpContents.htm
@@ -5,7 +5,7 @@
 <body bgcolor="#FFFFFF">
 <APPLET code="HHCtrl.class" name="HHCtrl" width=100% height=100%>
      <PARAM name="Command" value="Contents">
-     <PARAM name="Item1" value="TOC.htm">
+     <PARAM name="Item1" value="TOC.hhc">
 		 <param name="Frame" value="main">
 </APPLET> 
 </body>
